@@ -1,0 +1,37 @@
+ChangeLog
+MANIFEST
+Makefile.PL
+README
+XSLT.pm
+examples/91-22-5.cml
+examples/91-22-5.cml.xml
+examples/91-22-5.xml
+examples/95-48-7.xml
+examples/95-48-7.xsl
+examples/REC-xml-19980210.xml
+examples/REC-xslt-19991116.xml
+examples/agenda.dtd
+examples/agenda.html
+examples/agenda.xml
+examples/agenda.xsl
+examples/bernhard.xml
+examples/bernhard.xsl
+examples/cml.xsl
+examples/cml2cml.xsl
+examples/grammar.xml
+examples/grammar.xsl
+examples/grammar2.xml
+examples/grammar2.xsl
+examples/identity.xml
+examples/identity.xsl
+examples/identity.xsl_org
+examples/test.dtd
+examples/test.xml
+examples/test.xsl
+examples/test2.xml
+examples/test2.xsl
+examples/xmlspec.xsl
+examples/xpath.xsl
+examples/xslt.xsl
+t/00-load.t
+xslt-parser
