@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!-- @(#)xslspec.xsl 1.3 99/01/11 SMI; Style Sheet for the XML and XSL Recommendations and Working Drafts; written by Eduardo Gutentag -->
-<!-- $Id: xmlspec.xsl,v 1.1.1.1 2000/06/01 02:23:00 hexmode Exp $ Hacked by James Clark -->
+<!-- $Id: xmlspec.xsl,v 1.3 2000/07/10 13:35:34 brong Exp $ Hacked by James Clark -->
 <!DOCTYPE xsl:stylesheet [
 <!ENTITY copy   "&#169;">
 <!ENTITY nbsp   "&#160;">
